# DeltaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua  setup.bat  setup.sh
DeltaEngine/: Engine.lua
DeltaEngine/DeltaGraphics/: Graphics.lua
DeltaEngine/DeltaGraphics/include/: PCH.hpp
DeltaEngine/DeltaGraphics/include/EngineCore/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Keys.hpp  Log.hpp  Utils.hpp  Window.hpp
DeltaEngine/DeltaGraphics/include/EngineCore/Rendering/: Color.hpp  IndexBuffer.hpp  Renderer.hpp  ShaderProgram.hpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp
DeltaEngine/DeltaGraphics/src/EngineCore/: Application.cpp  Camera.cpp  Gui.cpp  Input.cpp  Time.cpp  Window.cpp
DeltaEngine/DeltaGraphics/src/EngineCore/Rendering/: Color.cpp
DeltaEngine/DeltaGraphics/src/EngineCore/Rendering/OpenGL/: GfxEnums.cpp  GlBufferLayout.cpp  GlIndexBuffer.cpp  GlRenderer.cpp  GlShaderProgram.cpp  GlTexture2D.cpp  GlVertexArray.cpp  GlVertexBuffer.cpp
DeltaEngine/DeltaGraphics/src/EngineCore/Rendering/Vulkan/: VkIndexBuffer.cpp  VkVertexBuffer.cpp
DeltaEngine/DeltaMath/: Math.lua
DeltaEngine/DeltaMath/include/: Mat2.hpp  Mat2.inl  Mat3.hpp  Mat3.inl  Mat4.hpp  Mat4.inl  Quat.hpp  Vec2.hpp  Vec2.inl  Vec3.hpp  Vec3.inl  Vec4.hpp  Vec4.inl
DeltaEngine/DeltaMath/include/DeltaMath/: Quat.inl  Vec2.hpp  Vec4.hpp  Vec4.inl
DeltaEngine/DeltaPhysics/: Physics.lua
DeltaEngine/Include/DeltaEngine/: Application.hpp  Camera.hpp  Event.hpp  Handle.hpp  HandleManager.hpp  Input.hpp  Log.hpp  Singleton.hpp  Time.hpp  Utils.hpp  Window.hpp
DeltaEngine/Include/DeltaEngine/Math/: Mat4.inl  Vec2.inl  Vec3.inl
DeltaEngine/Include/DeltaEngine/Render/: BufferLayout.hpp  Color.hpp  GfxEnums.hpp  GraphicsSystem.hpp  IndexBuffer.hpp  Renderer.hpp  ShaderManager.hpp  ShaderProgram.hpp  Texture2D.hpp  TextureManager.hpp  VertexBuffer.hpp
DeltaEngine/Source/DeltaEngine/: Application.cpp  Camera.cpp  Gui.cpp  Input.cpp  Time.cpp  Utils.cpp  Window.cpp
DeltaEngine/Source/DeltaEngine/Render/: Color.cpp  GraphicsSystem.cpp  ShaderManager.cpp  TextureManager.cpp
DeltaEngine/Source/DeltaEngine/Render/OpenGL/: GlBufferLayout.cpp  GlGfxEnums.cpp  GlIndexBuffer.cpp  GlRenderer.cpp  GlShaderProgram.cpp  GlTexture2D.cpp  GlVertexArray.cpp  GlVertexBuffer.cpp
DeltaGraphics/: CMakeLists.txt
DeltaGraphics/include/EngineCore/: Application.hpp  Camera.hpp  EntryPoint.hpp  Event.hpp  Gui.hpp  Input.hpp  Keys.hpp  Log.hpp  PCH.hpp  Time.hpp  Window.hpp
DeltaGraphics/include/EngineCore/Modules/: GUIModule.hpp
DeltaGraphics/include/EngineCore/Rendering/: BufferLayout.hpp  IndexBuffer.hpp  Renderer.hpp  Texture2D.hpp  VertexArray.hpp
DeltaGraphics/include/EngineCore/Rendering/OpenGL/: BufferLayout.hpp  GlBufferLayout.hpp  GlIndexBuffer.hpp  GlRenderer.hpp  GlShaderProgram.hpp  GlTypes.hpp  GlVertexArray.hpp  GlVertexBuffer.hpp  IndexBuffer.hpp  Renderer.hpp  ShaderProgram.hpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp
DeltaGraphics/shaders/: object.frag  object.vert
DeltaGraphics/src/EngineCore/: Application.cpp  Camera.cpp  Gui.cpp  Input.cpp  Time.cpp  Window.cpp
DeltaGraphics/src/EngineCore/Modules/: GUIModule.cpp
DeltaGraphics/src/EngineCore/Rendering/OpenGL/: GlBufferLayout.cpp  GlIndexBuffer.cpp  GlRenderer.cpp  GlShaderProgram.cpp  GlTexture2D.cpp  GlVertexArray.cpp  GlVertexBuffer.cpp
DeltaGraphics/src/EngineCore/Rendering/Vulkan/: VkBufferLayout.cpp  VkIndexBuffer.cpp  VkRenderer.cpp  VkShaderProgram.cpp  VkTexture2D.cpp  VkVertexArray.cpp  VkVertexBuffer.cpp
DeltaMath/: CMakeLists.txt
DeltaMath/include/: Mat2.hpp  Mat2.inl  Mat3.hpp  Mat3.inl  Mat4.hpp  Mat4.inl  Quat.inl  Vec2.hpp  Vec2.inl  Vec3.hpp  Vec4.inl
DeltaPhysics/: CMakeLists.txt
DeltaPhysics/DeltaCore/: CMakeLists.txt
DeltaPhysics/DeltaMath/: CMakeLists.txt
DeltaPhysics/DeltaMath/include/: Constants.hpp  Mat2.inl  Quat.hpp  Quat.inl  Vec3.hpp  Vec4.hpp
DeltaPhysics/include/Math/: Mat3.hpp  Mat3.inl  Mat4.hpp
DeltaPhysics/src/Math/: Mat2.hpp  Mat3.hpp  Mat3.inl  Mat4.hpp  Mat4.inl  Vec2.cpp  Vec2.hpp  Vec2.inl  Vec3.hpp  Vec3.inl  Vec4.hpp  Vec4.inl
Demo/: CMakeLists.txt  Demo.lua
Demo/include/: CubeData.hpp
Demo/src/: CubeData.cpp  main.cpp
Editor/: CMakeLists.txt
Editor/assets/shaders/: object.frag  object.vert
Editor/src/: main.cpp
Example/: CMakeLists.txt
Example/Demo/: CMakeLists.txt
Example/Demo/src/: main.cpp
Example/RenderFramework/: CMakeLists.txt
Example/RenderFramework/include/: Application.hpp  Event.hpp  PCH.hpp  Window.hpp
Example/RenderFramework/include/EngineCore/: Application.hpp  Event.hpp  Log.hpp  PCH.hpp  Window.hpp
Example/RenderFramework/include/EngineCore/Rendering/OpenGL/: GlBufferLayout.hpp  GlIndexBuffer.hpp  GlShaderProgram.hpp  GlVertexArray.hpp  GlVertexBuffer.hpp
Example/RenderFramework/src/: Application.cpp  Window.cpp
Example/RenderFramework/src/EngineCore/: Application.cpp  Window.cpp
Example/RenderFramework/src/EngineCore/Rendering/OpenGL/: GlBufferLayout.cpp  GlIndexBuffer.cpp  GlShaderProgram.cpp  GlVertexArray.cpp  GlVertexBuffer.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
